# ReviewbyGPT

./: .gitignore  README.md  pyproject.toml  setup.py
config/: llm_api_config.json  review_data.yaml
reviewbygpt/: __init__.py
reviewbygpt/lib/: __init__.py  excel_data_parser.py  llm_prompt_handler.py  response_handler.py  review_data_parser.py
reviewbygpt/scripts/: fill_missing_fields.py  intall_cuda.sh  main.py  ollama_diagnose.sh  pdf_to_excel.py  process_pasted_response.py
tests/: run_handler_chatgpt.py  run_pdf_review.py  test.py  test_excel.py  test_files.py
